--- a/USERcase/src/main/webapp/WEB-INF/web.xml
+++ b/USERcase/src/main/webapp/WEB-INF/web.xml
@@ -9,12 +9,26 @@
     <welcome-file>default.jsp</welcome-file>
     <welcome-file>default.htm</welcome-file>
   </welcome-file-list>
-  <!-- <servlet>
-  <servlet-name>CreateUserServlet</servlet-name>
-  <servlet-class>com.pritam.UserServlet.CreateUserServlet</servlet-class>
+  
+  <context-param>
+  <param-name>dburl</param-name>
+  <param-value>jdbc:mysql://localhost:3306/mydb</param-value>
+  </context-param>
+  <context-param>
+  <param-name>dbuname</param-name>
+  <param-value>root</param-value>
+  </context-param>
+  <context-param>
+  <param-name>dbpwd</param-name> 
+  <param-value>Godavari@1343</param-value>
+  </context-param>
+  
+  <servlet>
+  <servlet-name>ReadUserServlet</servlet-name>
+  <servlet-class>com.pritam.UserServlet.ReadUserServlet</servlet-class>
   </servlet>
   <servlet-mapping>
-  <servlet-name>CreateUserServlet</servlet-name>
-  <url-pattern>/addServlet</url-pattern>
-  </servlet-mapping> -->
+  <servlet-name>ReadUserServlet</servlet-name>
+  <url-pattern>/readServlet</url-pattern>
+  </servlet-mapping>
 </web-app>
